@@ -1,3 +1,4 @@
+2011-06-30: added calc_colours.component parameter for real or imag images
 2011-06-30: addeed electrode support in gmsh code 
 2011-06-30: added geophysics simulation for surface electrode array
 2011-06-30: eidors_msg will print the calling function automatically
